--- a/mario-examples/style.css
+++ b/mario-examples/style.css
@@ -52,7 +52,7 @@ html, body{
   left: 0;
   /* Apply keyframe to this element */
   animation-name: drive;
-  animation-duration: 3s;  /* 3s */
+  animation-duration: 5s;  /* 3s */
 
   /* Tells the element to stay at the 'to' 
     forwards: set the element to use 'to' values
@@ -67,9 +67,9 @@ html, body{
   animation-iteration-count: 2;  /* infinite */
 
   /* Set how the transition should act
-    Predeined values or cubic-bezier()
+    Predeined values or cubic-bezier() like cubic-bezier(.29,.29,.72,.72)
     See: cubic-bezier.com  */
-  transition-timing-function: cubic-bezier(.29,.29,.72,.72);
+  transition-timing-function: linear;
 }
 
 .luigi {
@@ -78,22 +78,49 @@ html, body{
   left: 0;
 
   animation-name: drive;
-  animation-duration: 5s;
+  animation-duration: 7s;
   animation-fill-mode: both;
-  animation-iteration-count: 1;
+  animation-iteration-count: 2;
   /* Set direction backwords.
      Also: normal, alternate (from-to-from... alternate direction )
      normal|reverse|alternate|alternate-reverse|initial|inherit  */ 
-  animation-direction: reverse;
-
+  /* animation-direction: reverse; */
 }
 
+
+.cloud {
+  position: absolute;
+}
+
+.cloud:nth-child(1) {
+  width: 200px;
+  top: 120px;
+  opacity: 0.5;
+
+   /* Set all on one line with animaiton???
+
+      animation: name duration timing-function delay iteration-count direction fill-mode;
+   */
+  animation: wind 80s linear infinite reverse;
+
+}
+.cloud:nth-child(2){
+  width: 300px;
+  top: 0;
+  /* */
+  animation: wind 50s linear infinite reverse;
+}
 
 /*// KEYFRAMES //*/
 @keyframes drive {
   /* Set from and to state - move element at x axis */
   from{ transform: translateX(-150px); }  /* 200px */
   to{ transform: translateX(950px); }  /* 700px */
+}
+
+@keyframes wind {
+  from{ left: -300px; }
+  to{ left: 90%; }
 }
 
 
