--- a/web-examples/style.css
+++ b/web-examples/style.css
@@ -62,9 +62,27 @@ button{
 
 /*// POP-UP ANIMATION STYLES //*/
 
+#pop-up {  /* Hide the pop-up */
+  top: -400px;  /* Hide pop-up */
 
+  transform-origin: 10px 10px;  /* Set swing center to x buttom on top left */
+  /* Drop down and then swing to the left */
+  animation: drop 0.5s ease forwards,
+                swing 2s 3s ease forwards;
+}
 
+@keyframes drop {
+  0%{ opacity: 0;}  /* Blur pop-up */
+  70%{ transform: translateY(700px); }
+  100%{ transform: translateY(650px); opacity: 1; }  /*  Unbur pop-up */
+}
 
+@keyframes swing {
+  0%{ transform: translateY(650px) rotateZ(0deg) }  /* To keep 100% state from 'drop' */
+  40%{ transform: translateY(650px) rotateZ(90deg) }
+  70%{ transform: translateY(650px) rotateZ(70deg) }
+  100%{ transform: translateY(650px) rotateZ(75deg) }
+}
 
 
 /*// BASKET BASE STYLES //*/
